2 commit, test gadget

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     <div class="main">
         <div class="date">Дата рождения</div>
         <input class="date-birthday" id="date-birthday-mask" type="text" name="date_birthday"></input>
+        <div> </div>
         <button class="btn" id="button">График</button>
+        
     </div>
 
     <canvas id="myCanvas" width="1000" height="480"></canvas>
+    <canvas class = "canvas_gadget" id="myCanvasGadget" width="480" height="480"></canvas>
+    
     <script src="script.js"></script>
 </body>
 
