3-d commit, add Gadget

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>Биоритмы</h2>
+    <h2>БИОРИТМЫ</h2>
 
     <!-- <div class="container">
         <button class="btn">Fade out all texts</button>
@@ -24,12 +24,25 @@
         <input class="date-birthday" id="date-birthday-mask" type="text" name="date_birthday"></input>
         <div> </div>
         <button class="btn" id="button">График</button>
-        
+
     </div>
 
     <canvas id="myCanvas" width="1000" height="480"></canvas>
-    <canvas class = "canvas_gadget" id="myCanvasGadget" width="480" height="480"></canvas>
-    
+
+    <canvas class="canvas_gadget" id="myCanvasGadget" width="480" height="480"></canvas>
+
+    <p class="text">
+        <spam> <b>Физический биоритм.</b> Связан с работой организма человека. Он определяет внутреннюю энергию, выносливость, скорость реакции и метаболизма. Достигая своего пика, данный биологический ритм увеличивает способность организма к восстановлению. Особенную важность это представляет для спортсменов и людей, чья деятельность связана с физической активностью. </spam>
+    </p>
+    <br>
+    <p class="text">
+        <span> <b>Эмоциональный биоритм.</b> Он влияет на восприятие и чувствительность, а также может преображать спектр ощущений человека. Именно из-за этого ритма люди склонны к смене настроения в течение дня. Он отвечает за творческое начало, интуицию и способность к сопереживанию. Женщины и люди с художественным складом более подвержены воздействию этого цикла. Эмоциональное состояние, вызванное колебаниями данного ритма, влияет на семейные отношение, любовь.</span>
+    </p>
+    <br>
+    <p class="text">
+        <span> <b> Интеллектуальный биологический.</b>    Определяет умственные способности. Кроме этого, он отвечает за осторожность и рациональность действий в поведении. Сильнее всего прочувствовать влияние этого биоритма могут представители интеллектуальных профессий: преподаватели, ученые, профессора и финансисты. От интеллектуальных биоциклов зависит способность к концентрации и восприятию информации.</span>
+    </p>
+    <br>
     <script src="script.js"></script>
 </body>
 
